src/test/ui/const-expr-addr-operator.stderr
error[E0080]: constant evaluation error
  --> $DIR/const-expr-addr-operator.rs:15:29
   |
15 |     const X: &'static u32 = &22; //~ ERROR constant evaluation error
   |                             ^^^ unimplemented constant expression: address operator
   |
note: for pattern here
  --> $DIR/const-expr-addr-operator.rs:17:9
   |
17 |         X => 0,
   |         ^

error: aborting due to previous error

